# Rust

./: .gitignore  AGENTS.md  Cargo.toml
---- Part 1 Basic Programming with Rust ----/1 - Quick Startup/: 1 - Variables and Constants.txt  10 - Variable Conventions and Statics.txt  11 - Compiler Directives.txt  12 - Error Messages and Error Codes.txt  13 - Operators in Rust.txt  14 - Associativity and Operator Overloading.txt  15 - Operator Precedence.txt  2 - Primitive Data Types.txt  3 - Compound Data Types.txt  4 - Functions and Code Blocks.txt  5 - Mutability in Function Parameters.txt  6 - Conditionals.txt  7 - Control Flow.txt  8 - Common Syntaxes of For Loop Syntaxes with Ranges.txt  9 - Comments, Print commands and input.txt
---- Part 1 Basic Programming with Rust ----/2 - Ownership and Borrowing/: 1 - Ownership Basics.txt  2 - Ownership in Functions.txt  3 - Borrowing Basics.txt  4 - Borrowing in Functions.txt  5 - Dereferencing.txt
---- Part 1 Basic Programming with Rust ----/3 - Custom and Library Provided/: 1 - Structs Basics.txt  10 - Method Chaining Constraints.txt  2 - Adding Functionality to Structs.txt  3 - Enums.txt  4 - Option.txt  5 - Result.txt  6 - Hashmaps.txt  7 - Pattern Matching Contexts.txt  8 - Destructured Struct Parameters.txt  9 - Casting and Assignment of References.txt
---- Part 1 Basic Programming with Rust ----/4 - Organizing your Code/: 1 - Code Organization.txt  1 - Modules.ppt  2 - Modules basic.txt  3 - Visibility Specifiers.txt  5 - External Dependencies.ppt  5 - Privacy in modules.txt  (+2 more)
docs/: README.md  course-outline.md
(+755 files in other folders)
